lisää yhteiset tyylimääritteet

--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -1,6 +1,8 @@
+@import '../../assets/styles/_config.scss';
+
 .item {
-  color: #696963;
-  border-bottom: 1px solid #C4C4C0;
+  color: $color-neutral-dark;
+  border-bottom: 1px solid $color-neutral-light;
 }
 
 .item_data {
@@ -14,6 +16,6 @@
 }
 
 .item_type, .item_amount {
-  color: #000000;
+  color: $color-neutral-darkest;
   font-weight: bold;
 }
