lisää merkinnän muokkauslinkin

--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -3,12 +3,14 @@
 .item {
   color: $color-neutral-dark;
   border-bottom: 1px solid $color-neutral-light;
+  display: flex;
 }
 
 .item_data {
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 0.75rem;
+  flex: 1;
 }
 
 .item_amount, .item_timespan, .item_average {
@@ -18,4 +20,19 @@
 .item_type, .item_amount {
   color: $color-neutral-darkest;
   font-weight: bold;
+}
+
+.item_edit {
+  max-width: 2rem;
+  min-width: 2rem;
+  background-color: $color-neutral-lighter;
+  color: $color-neutral-dark;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.75rem;
+}
+
+.item:hover .item_edit {
+  display: flex;
 }
